Fix mousepad on Safari
Styles in general need some organizational love.

--- a/src/modules/mousepad/mousepad.scss
+++ b/src/modules/mousepad/mousepad.scss
@@ -1,5 +1,6 @@
 .mousepad {
   flex-grow: 1;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
